update docker code

--- a/acmeair-fs/Dockerfile
+++ b/acmeair-fs/Dockerfile
@@ -10,11 +10,8 @@ RUN rm -rf /opt/ibm/wlp/usr/servers/defaultServer/workarea
 
 ADD ./build/libs/*.war /opt/ibm/wlp/usr/servers/defaultServer/apps
 
-EXPOSE 9092 9492
-#ENTRYPOINT ["/bin/bash"]
+EXPOSE 80
 
-ENV CUSTOMER_SERVICE=192.168.99.100/acmeair
-ENV AUTH_SERVICE=192.168.99.100/acmeair
-ENV MONGO_HOST=192.168.99.100
+ENV MONGO_HOST=db
 
 CMD ["/opt/ibm/wlp/bin/server", "run", "defaultServer"]
