--- a/acmeair-mainapp/Dockerfile
+++ b/acmeair-mainapp/Dockerfile
@@ -10,11 +10,6 @@ RUN rm -rf /opt/ibm/wlp/usr/servers/defaultServer/workarea
 
 ADD ./build/libs/*.war /opt/ibm/wlp/usr/servers/defaultServer/apps
 
-EXPOSE 9090 9490
-#ENTRYPOINT ["/bin/bash"]
-
-ENV CUSTOMER_SERVICE=192.168.99.100/acmeair
-ENV AUTH_SERVICE=192.168.99.100/acmeair
-ENV MONGO_HOST=192.168.99.100
+EXPOSE 80
 
 CMD ["/opt/ibm/wlp/bin/server", "run", "defaultServer"]
