--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,18 @@ project(':acmeair-as') {
     dependencies {
         compile project(':acmeair-services')
         compile project(':acmeair-services-mongo')
+        compile project(':acmeair-loader')
+        providedRuntime 'javax:javaee-web-api:7.0'
+    }
+}
+
+project(':acmeair-bs') {
+    apply plugin: 'war'
+
+    dependencies {
+        compile project(':acmeair-services')
+        compile project(':acmeair-services-mongo')
+        compile project(':acmeair-loader')
         providedRuntime 'javax:javaee-web-api:7.0'
     }
 }
@@ -57,16 +69,6 @@ project(':acmeair-cs') {
     }
 }
 
-project(':acmeair-bs') {
-    apply plugin: 'war'
-
-    dependencies {
-        compile project(':acmeair-services')
-        compile project(':acmeair-services-mongo')
-        providedRuntime 'javax:javaee-web-api:7.0'
-    }
-}
-
 project(':acmeair-fs') {
     apply plugin: 'war'
 
@@ -74,6 +76,14 @@ project(':acmeair-fs') {
         compile project(':acmeair-services')
         compile project(':acmeair-services-mongo')
         compile project(':acmeair-loader')
+        providedRuntime 'javax:javaee-web-api:7.0'
+    }
+}
+
+project(':acmeair-ss') {
+    apply plugin: 'war'
+
+    dependencies {
         providedRuntime 'javax:javaee-web-api:7.0'
     }
 }
