Add main service for Bluemix

--- a/acmeair-mainapp/src/main/webapp/WEB-INF/web.xml
+++ b/acmeair-mainapp/src/main/webapp/WEB-INF/web.xml
@@ -11,5 +11,9 @@
     <servlet-name>com.acmeair.web.AppConfig</servlet-name>
     <url-pattern>/rest/api/*</url-pattern>
   </servlet-mapping>
+  <listener>
+    <description>Service Discovery Registration Service</description>
+    <listener-class>com.acmeair.util.ServiceRegister</listener-class>
+  </listener>
 </web-app>
 
