--- a/acmeair-mainapp/Dockerfile_BlueMix_main
+++ b/acmeair-mainapp/Dockerfile_BlueMix_main
@@ -1,4 +1,4 @@
-FROM websphere-liberty:kernel
+FROM registry.ng.bluemix.net/ibmliberty:javaee7
 COPY ./acmeair-mainapp/server.xml /config/
 RUN installUtility install --acceptLicense defaultServer
 
