--- a/acmeair-bs/Dockerfile_BlueMix_bs
+++ b/acmeair-bs/Dockerfile_BlueMix_bs
@@ -1,5 +1,6 @@
-FROM websphere-liberty:kernel
+FROM registry.ng.bluemix.net/ibmliberty:javaee7
 COPY ./acmeair-bs/server.xml /config/
+
 RUN installUtility install --acceptLicense defaultServer
 
 EXPOSE 80
