--- a/acmeair-cs/Dockerfile_BlueMix_cs
+++ b/acmeair-cs/Dockerfile_BlueMix_cs
@@ -1,5 +1,6 @@
-FROM websphere-liberty:kernel
+FROM registry.ng.bluemix.net/ibmliberty:javaee7
 COPY ./acmeair-cs/server.xml /config/
+
 RUN installUtility install --acceptLicense defaultServer
 
 EXPOSE 80
