--- a/build.gradle
+++ b/build.gradle
@@ -100,6 +100,7 @@ project(':acmeair-services-mongo') {
 project(':acmeair-services') {
     dependencies {
         compile 'com.googlecode.json-simple:json-simple:1.1.1'
+        compile group: 'org.apache.httpcomponents', name: 'httpasyncclient', version: '4.1.3'
     }
 }
 
