--- a/acmeair-as/src/main/webapp/WEB-INF/web.xml
+++ b/acmeair-as/src/main/webapp/WEB-INF/web.xml
@@ -6,6 +6,10 @@
   </welcome-file-list> 
   <servlet>
     <servlet-name>com.acmeair.web.AcmeAirApp</servlet-name>
+    <init-param>
+      <param-name>com.ibm.ws.webcontainer.async-supported</param-name>
+      <param-value>true</param-value>
+    </init-param>
   </servlet>
   <servlet-mapping>
     <servlet-name>com.acmeair.web.AcmeAirApp</servlet-name>
