--- a/acmeair-cs/src/main/webapp/WEB-INF/web.xml
+++ b/acmeair-cs/src/main/webapp/WEB-INF/web.xml
@@ -8,6 +8,10 @@
   <filter>
     <filter-name>CookieFilter</filter-name>
     <filter-class>com.acmeair.web.RESTCookieSessionFilter</filter-class>
+    <init-param>
+      <param-name>com.ibm.ws.webcontainer.async-supported</param-name>
+      <param-value>true</param-value>
+    </init-param>
   </filter>
   <filter-mapping>
     <filter-name>CookieFilter</filter-name>
