--- a/acmeair-ss/Dockerfile
+++ b/acmeair-ss/Dockerfile
@@ -10,6 +10,10 @@ RUN rm -rf /opt/ibm/wlp/usr/servers/defaultServer/workarea
 
 ADD ./build/libs/*.war /opt/ibm/wlp/usr/servers/defaultServer/apps
 
+RUN apt-get update && apt-get install -y nginx-full
+RUN rm /etc/nginx/nginx.conf
+ADD conf /etc/nginx/
+
 EXPOSE 80
 
-CMD ["/opt/ibm/wlp/bin/server", "run", "defaultServer"]
+CMD ["/bin/bash", "-c", "nginx & /opt/ibm/wlp/bin/server run defaultServer"]
