Initial commit for coap proxy forwarding

--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -7,35 +7,40 @@ events {
 
 http {
   upstream mainservices {
-    server main_service_liberty1;
+    server _main_service_liberty1_;
     keepalive 100;
   }
 
   upstream authservices {
-    server auth_service_liberty1;
+    server _auth_service_liberty1_;
     keepalive 100;
   }
   upstream bookingservices {
-    server booking_service_liberty1;
+    server _booking_service_liberty1_;
     keepalive 100;
   }
   upstream customerservices {
-    server customer_service_liberty1;
+    server _customer_service_liberty1_;
     keepalive 100;
   }
   upstream flightservices {
-    server flight_service_liberty1;
+    server _flight_service_liberty1_;
     keepalive 100;
   }
   upstream supportservices {
-    server support_service_liberty1;
+    server _support_service_liberty1_;
+  }
+
+  upstream coapgateway {
+    server nginx1:8080;
   }
 
   server {
     listen 80;
 
     location /main/acmeair {
-      proxy_pass http://mainservices/acmeair;
+      proxy_pass http://coapgateway/proxy/coap://_main_service_liberty1_:5683/coap2http/http://main_service_liberty1/mainservices/acmeair
+      # http://localhost:8084/proxy/coap://localhost:5683/coap2http/http://api.shikashi.me/app
       proxy_http_version 1.1;
       proxy_set_header Connection "";
     }
