--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -39,7 +39,7 @@ http {
     listen 80;
 
     location /main/acmeair {
-      proxy_pass http://coapgateway/proxy/coap://_main_service_liberty1_:5683/coap2http/http://main_service_liberty1/mainservices/acmeair
+      proxy_pass http://coapgateway/proxy/coap://_main_service_liberty1_:5683/coap2http/http://main_service_liberty1/mainservices/acmeair;
       # http://localhost:8084/proxy/coap://localhost:5683/coap2http/http://api.shikashi.me/app
       proxy_http_version 1.1;
       proxy_set_header Connection "";
