Replace _ with - in hostnames

--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -7,28 +7,28 @@ events {
 
 http {
   upstream mainservices {
-    server _main_service_liberty1_;
+    server _main-service-liberty1_;
     keepalive 100;
   }
 
   upstream authservices {
-    server _auth_service_liberty1_;
+    server _auth-service-liberty1_;
     keepalive 100;
   }
   upstream bookingservices {
-    server _booking_service_liberty1_;
+    server _booking-service-liberty1_;
     keepalive 100;
   }
   upstream customerservices {
-    server _customer_service_liberty1_;
+    server _customer-service-liberty1_;
     keepalive 100;
   }
   upstream flightservices {
-    server _flight_service_liberty1_;
+    server _flight-service-liberty1_;
     keepalive 100;
   }
   upstream supportservices {
-    server _support_service_liberty1_;
+    server _support-service-liberty1_;
   }
 
   upstream coapgateway {
@@ -39,7 +39,7 @@ http {
     listen 80;
 
     location /main/acmeair {
-      proxy_pass http://coapgateway/proxy/coap://_main_service_liberty1_:5683/coap2http/http://main_service_liberty1/mainservices/acmeair;
+      proxy_pass http://coapgateway/proxy/coap://_main-service-liberty1_:5683/coap2http/http://main-service-liberty1/mainservices/acmeair;
       # http://localhost:8084/proxy/coap://localhost:5683/coap2http/http://api.shikashi.me/app
       proxy_http_version 1.1;
       proxy_set_header Connection "";
