Redirect all services over coap

--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -45,30 +45,30 @@ http {
     }
 
     location  /auth/acmeair-as/rest/api/login {
-      proxy_pass http://authservices/acmeair-as/rest/api/login;
+      proxy_pass http://coapgateway/proxy/coap://_auth-service-liberty1_:5683/coap2http/http://auth-service-liberty1/acmeair-as/rest/api/login;
       proxy_http_version 1.1;
       proxy_set_header Connection "";
     }
 
     location /booking/acmeair-bs/rest/api/bookings {
-      proxy_pass http://bookingservices/acmeair-bs/rest/api/bookings;
+      proxy_pass http://coapgateway/proxy/coap://_booking-service-liberty1_:5683/coap2http/http://booking-service-liberty1/acmeair-bs/rest/api/bookings;
       proxy_http_version 1.1;
       proxy_set_header Connection "";
     }
 
     location /customer/acmeair-cs/rest/api/customer {
-      proxy_pass http://customerservices/acmeair-cs/rest/api/customer;
+      proxy_pass http://coapgateway/proxy/coap://_customer-service-liberty1_:5683/coap2http/http://customer-service-liberty1/acmeair-cs/rest/api/customer;
       proxy_http_version 1.1;
       proxy_set_header Connection "";
     }
 
     location /flight/acmeair-fs/rest/api/flights {
-      proxy_pass http://flightservices/acmeair-fs/rest/api/flights;
+      proxy_pass http://coapgateway/proxy/coap://_flight-service-liberty1_:5683/coap2http/http://flight-service-liberty1/acmeair-fs/rest/api/flights;
       proxy_http_version 1.1;
       proxy_set_header Connection "";
     }
     location /support/supportrequest {
-      proxy_pass http://supportservices/acmeair-ss/supportrequest;
+      proxy_pass http://coapgateway/proxy/coap://_support-service-liberty1_:5683/coap2http/http://support-service-liberty1/acmeair-ss/supportrequest;
       proxy_http_version 1.1;
 	  proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection "upgrade";
